Añadida gramatica abstracta y clases generadas correctamente

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>DLP_Clase3</name>
+	<name>DLP_TODO</name>
 	<comment></comment>
 	<projects>
 	</projects>
